testsuite/tests/properties/invalid_generics/astlist_root/test.lkt
from common import FooNode, Example

class ExampleSeq: FooNode {
    @parse_field items: ASTList[Example, Example]
}
